fix btn hover on mobile

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -14,8 +14,10 @@
     border: solid darken($btnBgColor, 5%);
     border-radius: $radius;
     padding: 5px;
-    &:hover {
-        box-shadow:3px 3px 3px grey;
+    @media (hover:hover){
+        &:hover {
+            box-shadow:3px 3px 3px grey;
+        }
     }
     /* add same effect to touch device */
     &:active {
